--- a/FrontEnd/OwnerPage.html
+++ b/FrontEnd/OwnerPage.html
@@ -13,11 +13,36 @@
 </head>
 <body style="background-color:black;">
 
+<div style="min-height: 5vh"></div>
+
   <div class="container">
-    <div style="height:91%">
+    <div style="min-height: 80vh">
     <div class="row">
       <div class="col text-center">
         <p style="color:white">This is a sample owner page.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div style="min-height: 5vh">
+    <div class="row">
+      <div class="col text-center">
+        <form action="https://automation.chain.link/mumbai/28627704143175605969914145047990488382129654323040445773310494415714392303066">
+          <input type="submit" class="btn btn-outline-primary" value="Chainlink Keepers Log" />
+      </form>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="container">
+    <div style="min-height: 5vh">
+    <div class="row">
+      <div class="col text-center">
+        <form action="https://vrf.chain.link/mumbai/2217">
+          <input type="submit" class="btn btn-outline-primary" value="Chainlink VRFv2 Log" />
+      </form>
       </div>
     </div>
   </div>
