--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div style="min-height: 5vh">
     <div class="col text-center">
       <form action="FrontEnd/BuyPage.html">
-        <input type="submit" class="btn btn-outline-light" value="Click to enter." />
+        <input type="submit" class="btn btn-outline-light" value="Enter GweiPump" />
     </form>
   </div>
 </div>
