Update pages, images and scripts

--- a/pages/owner.html
+++ b/pages/owner.html
@@ -5,7 +5,7 @@
   <!-- Bootstrap -->
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="shortcut icon" type="png" href="../Images/favicon.png">
+  <link rel="shortcut icon" type="png" href="../images/favicon.png">
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
   <!-- Helps objects scale to mobile devices -->
@@ -16,7 +16,7 @@
 <div style="min-height: 5vh"></div>
 
   <div class="container">
-    <div style="min-height: 80vh">
+    <div style="min-height: 50vh">
     <div class="row">
       <div class="col text-center">
         <p style="color:white">This is a sample owner page.</p>
@@ -48,10 +48,21 @@
   </div>
 
   <div class="container">
+    <div style="min-height: 5vh">
+    <div class="row">
+      <div class="col text-center">
+        <form action="https://github.com/GweiPump">
+          <input type="submit" class="btn btn-outline-light" value="GitHub" />
+      </form>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
     <div class="row">
       <div class="col text-center">
         <form action="../index.html">
-          <input type="submit" class="btn btn-outline-light" value="Return to home page." />
+          <input type="submit" class="btn btn-outline-light" value="Home Page" />
       </form>
       </div>
     </div>
