--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Bootstrap -->
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="shortcut icon" type="png" href="Images/favicon.png">
+  <link rel="shortcut icon" type="png" href="images/favicon.png">
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
   <!-- Helps objects scale to mobile devices -->
@@ -17,13 +17,13 @@
 
 <div style="min-height: 85vh">
   <div class="col text-center">
-    <img class="img-fluid" alt="Responsive image" src="Images/gweiPump.png" width="450" height="450"/><!--Set width to 40% of the screen width-->
+    <img class="img-fluid" alt="Responsive image" src="images/gweiPump.png" width="450" height="450"/><!--Set width to 40% of the screen width-->
 </div>
 </div>
 
 <div style="min-height: 5vh">
     <div class="col text-center">
-      <form action="FrontEnd/BuyPage.html">
+      <form action="pages/buy.html">
         <input type="submit" class="btn btn-outline-light" value="Enter GweiPump" />
     </form>
   </div>
