--- a/pages/buy.html
+++ b/pages/buy.html
@@ -5,7 +5,7 @@
   <!-- Bootstrap -->
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="shortcut icon" type="png" href="../Images/favicon.png">
+  <link rel="shortcut icon" type="png" href="../images/favicon.png">
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
   <!-- Helps objects scale to mobile devices -->
@@ -52,7 +52,7 @@
   <div style="min-height: 5vh">
   <div class="row">
     <div class="col text-center">
-      <form action="OwnerPage.html">
+      <form action="owner.html">
         <input type="submit" class="btn btn-outline-light" value="Owner" />
     </form>
     </div>
@@ -67,7 +67,7 @@
   <!-- WEB3 IMPORT -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.5.0-rc.0/web3.min.js"></script>
   <!-- Needed to run javascript main library -->
-  <script src="../Scripts/app.js"></script>
+  <script src="../scripts/buy.js"></script>
 
 </body>
 
