Added pump status to buy and owner pages

--- a/pages/owner.html
+++ b/pages/owner.html
@@ -26,6 +26,17 @@
   </div>
 
   <div class="container">
+    <div style="min-height: 20vh">
+    <div class="row">
+      <div class="col text-center">
+        <p style="color:white">Pump Status <br> (0 Closed , 1 Open) </p>
+        <p style="color:white" id="getPumpStatus"></p>
+      </div>
+    </div>
+   </div>
+  </div>
+
+  <div class="container">
     <div style="min-height: 10vh">
     <div class="row">
       <div class="col text-center">
