--- a/pages/buy.html
+++ b/pages/buy.html
@@ -31,12 +31,22 @@
   <div class="row">
     <div class="col text-center">
       <p style="color:white">Chainlink request WTI/USD price in contract: </p>
-      <p style="color:white" id="getValueStateSmartContract"></p>
+      <p style="color:white" id="getWtiUsd"></p>
     </div>
   </div>
  </div>
 </div>
 
+<div class="container">
+  <div style="min-height: 20vh">
+  <div class="row">
+    <div class="col text-center">
+      <p style="color:white">Pump Status <br> (0 Closed , 1 Open) </p>
+      <p style="color:white" id="getPumpStatus"></p>
+    </div>
+  </div>
+ </div>
+</div>
 
 <div class="container">
   <div style="min-height: 35vh">
