--- a/pages/buy.html
+++ b/pages/buy.html
@@ -49,6 +49,17 @@
 </div>
 
 <div class="container">
+  <div style="min-height: 20vh">
+  <div class="row">
+    <div class="col text-center">
+      <p style="color:white">MATIC/WTI 40mL <br> (Scaled up 10% then refunded to handle price swings while in mempool) </p>
+      <p style="color:white" id="getMaticWei40mL"></p>
+    </div>
+  </div>
+ </div>
+</div>
+
+<div class="container">
   <div style="min-height: 35vh">
   <div class="row">
     <div class="col text-center">
