--- a/pages/buy.html
+++ b/pages/buy.html
@@ -30,7 +30,7 @@
   <div style="min-height: 20vh">
   <div class="row">
     <div class="col text-center">
-      <p style="color:white">Chainlink request WTI/USD price in contract: </p>
+      <p style="color:white">Chainlink request WTI/USD price in contract</p>
       <p style="color:white" id="getWtiUsd"></p>
     </div>
   </div>
@@ -52,8 +52,8 @@
   <div style="min-height: 20vh">
   <div class="row">
     <div class="col text-center">
-      <p style="color:white">MATIC/WTI 40mL <br> (Scaled up 10% then refunded to handle price swings while in mempool) </p>
-      <p style="color:white" id="getMaticWei40mL"></p>
+      <p style="color:white"> (WTI [40mL])/MATIC <br> (Scaled up 10% then refunded to handle price swings while in mempool) </p>
+      <p style="color:white" id="getWei40mLmatic"></p>
     </div>
   </div>
  </div>
