--- a/pages/buy.html
+++ b/pages/buy.html
@@ -17,7 +17,7 @@
 <div style="min-height: 5vh"></div>
 
 <div class="container">
-  <div style="min-height: 30vh">
+  <div style="min-height: 10vh">
   <div class="row">
     <div class="col text-center">
       <button class="btn btn-outline-light" id=enableEthereumButton></button>
@@ -27,7 +27,7 @@
 </div>
 
 <div class="container">
-  <div style="min-height: 20vh">
+  <div style="min-height: 15vh">
   <div class="row">
     <div class="col text-center">
       <p style="color:white">Chainlink request WTI/USD price in contract</p>
@@ -38,7 +38,7 @@
 </div>
 
 <div class="container">
-  <div style="min-height: 20vh">
+  <div style="min-height: 15vh">
   <div class="row">
     <div class="col text-center">
       <p style="color:white">Pump Status <br> (0 Closed , 1 Open) </p>
@@ -49,7 +49,7 @@
 </div>
 
 <div class="container">
-  <div style="min-height: 20vh">
+  <div style="min-height: 15">
   <div class="row">
     <div class="col text-center">
       <p style="color:white"> (WTI [40mL])/MATIC <br> (Scaled up 10% then refunded to handle price swings while in mempool) </p>
@@ -60,13 +60,24 @@
 </div>
 
 <div class="container">
-  <div style="min-height: 35vh">
+  <div style="min-height: 20vh">
   <div class="row">
     <div class="col text-center">
       <button class="buyOilButton btn btn-outline-light">Buy Oil <br> [Pump 40 mL]</button>
     </div>
   </div>
   </div>
+</div>
+
+<div class="container">
+  <div style="min-height: 15">
+  <div class="row">
+    <div class="col text-center">
+      <p style="color:white">VRFv2 Value EDIT AND MODIFY</p>
+      <p style="color:white" id="randomValueVRFv2"></p>
+    </div>
+  </div>
+ </div>
 </div>
 
 <div class="container">
