Fixed open and close pump buttons owner page

--- a/pages/owner.html
+++ b/pages/owner.html
@@ -26,7 +26,7 @@
   </div>
 
   <div class="container">
-    <div style="min-height: 20vh">
+    <div style="min-height: 10vh">
     <div class="row">
       <div class="col text-center">
         <p style="color:white">Pump Status <br> (0 Closed , 1 Open) </p>
@@ -37,10 +37,20 @@
   </div>
 
   <div class="container">
+    <div style="min-height: 5vh">
+    <div class="row">
+      <div class="col text-center">
+        <p style="color:white">Pump Control</p>
+      </div>
+    </div>
+   </div>
+  </div>
+
+  <div class="container">
     <div style="min-height: 10vh">
     <div class="row">
       <div class="col text-center">
-        <button class="closePumpButton btn btn-outline-danger">Off</button>
+        <button class="closePumpButton btn btn-outline-danger">Close</button>
       </div>
     </div>
     </div>
@@ -50,7 +60,7 @@
     <div style="min-height: 10vh">
     <div class="row">
       <div class="col text-center">
-        <button class="openPumpButton btn btn-outline-success">On</button>
+        <button class="openPumpButton btn btn-outline-success">Open</button>
       </div>
     </div>
     </div>
