Blue text for Chainlink related contract functions

--- a/pages/buy.html
+++ b/pages/buy.html
@@ -30,8 +30,8 @@
   <div style="min-height: 10vh">
   <div class="row">
     <div class="col text-center">
-      <p style="color:white">Chainlink request WTI/USD price in contract</p>
-      <p style="color:white" id="getWtiUsd"></p>
+      <p style="color:blue">Chainlink request WTI/USD price in contract</p>
+      <p style="color:blue" id="getWtiUsd"></p>
     </div>
   </div>
  </div>
@@ -52,8 +52,8 @@
   <div style="min-height: 10">
   <div class="row">
     <div class="col text-center">
-      <p style="color:white"> (WTI [40mL])/MATIC <br> (Scaled up 10% then refunded to handle price swings while in mempool) </p>
-      <p style="color:white" id="getWei40mLmatic"></p>
+      <p style="color:blue"> (WTI [40mL])/MATIC <br> (Scaled up 10% then refunded to handle price swings while in mempool) </p>
+      <p style="color:blue" id="getWei40mLmatic"></p>
     </div>
   </div>
  </div>
@@ -73,8 +73,8 @@
   <div style="min-height: 10vh">
   <div class="row">
     <div class="col text-center">
-      <p style="color:white">Vocktail <br> (1 left, 2 right, 3 mixed)</p>
-      <p style="color:white" id="randomValueVRFv2"></p>
+      <p style="color:blue">Vocktail <br> (1 left, 2 right, 3 mixed)</p>
+      <p style="color:blue" id="randomValueVRFv2"></p>
     </div>
   </div>
  </div>
