--- a/index.html
+++ b/index.html
@@ -15,17 +15,28 @@
 
 <div style="min-height: 5vh"></div>
 
-<div style="min-height: 85vh">
+<div style="min-height: 75vh">
   <div class="col text-center">
     <img class="img-fluid" alt="Responsive image" src="images/gweiPump.png" width="450" height="450"/><!--Set width to 40% of the screen width-->
 </div>
 </div>
 
-<div style="min-height: 5vh">
+<div style="min-height: 10vh">
     <div class="col text-center">
       <form action="pages/buy.html">
         <input type="submit" class="btn btn-outline-light" value="Enter GweiPump" />
     </form>
+  </div>
+</div>
+
+<div class="container">
+  <div style="min-height: 0vh">
+  <div class="row">
+    <div class="col text-center">
+      <form action="https://github.com/GweiPump">
+        <input type="submit" class="btn btn-outline-light" value="GitHub" />
+    </form>
+    </div>
   </div>
 </div>
 
