--- a/pages/owner.html
+++ b/pages/owner.html
@@ -16,7 +16,7 @@
   <div style="min-height: 5vh"></div>
 
   <div class="container">
-    <div style="min-height: 30vh">
+    <div style="min-height: 10vh">
     <div class="row">
       <div class="col text-center">
         <button class="btn btn-outline-light" id=enableEthereumButton></button>
@@ -47,7 +47,7 @@
   </div>
 
   <div class="container">
-    <div style="min-height: 10vh">
+    <div style="min-height: 5vh">
     <div class="row">
       <div class="col text-center">
         <button class="closePumpButton btn btn-outline-danger">Close</button>
@@ -67,10 +67,26 @@
   </div>
 
   <div class="container">
-    <div style="min-height: 5vh">
+    <div style="min-height: 20vh">
     <div class="row">
       <div class="col text-center">
-        <form action="https://automation.chain.link/mumbai/28627704143175605969914145047990488382129654323040445773310494415714392303066">
+        <p style="color:blue">
+                              Manual upKeep
+                              <br>Valid WTI/USD daily upKeep if:
+                              <br>Contract has enough LINK tokens to pay Chainlink node for the request
+                              <br>Has been 1 day since last request
+        </p>
+        <button class="manualUpKeepButton btn btn-outline-primary">Manual Daily WTI/USD Chainlink Request</button>
+      </div>
+    </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div style="min-height: 10vh">
+    <div class="row">
+      <div class="col text-center">
+        <form action="https://automation.chain.link/mumbai/23700364967518116602092399341271506585751149534702175886319842804386728513839">
           <input type="submit" class="btn btn-outline-primary" value="Chainlink Keepers Log" />
       </form>
       </div>
@@ -79,22 +95,11 @@
 
 
   <div class="container">
-    <div style="min-height: 5vh">
+    <div style="min-height: 10vh">
     <div class="row">
       <div class="col text-center">
         <form action="https://vrf.chain.link/mumbai/2217">
           <input type="submit" class="btn btn-outline-primary" value="Chainlink VRFv2 Log" />
-      </form>
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div style="min-height: 5vh">
-    <div class="row">
-      <div class="col text-center">
-        <form action="https://github.com/GweiPump">
-          <input type="submit" class="btn btn-outline-light" value="GitHub" />
       </form>
       </div>
     </div>
