Updated page links GitHub and other button names

--- a/pages/buy.html
+++ b/pages/buy.html
@@ -73,7 +73,7 @@
   <div style="min-height: 10vh">
   <div class="row">
     <div class="col text-center">
-      <p style="color:blue">Vocktail <br> (1 left, 2 right, 3 mixed)</p>
+      <p style="color:blue">Vocktail <br> (1 Left, 2 Right, 3 Mixed)</p>
       <p style="color:blue" id="randomValueVRFv2"></p>
     </div>
   </div>
