--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 </div>
 </div>
 
+<div class="container">
+  <div style="min-height: 10vh">
+  <div class="row">
+    <div class="col text-center">
+      <form action="https://github.com/GweiPump">
+        <input type="submit" class="btn btn-outline-light" value="GweiPump GitHub" />
+    </form>
+    </div>
+  </div>
+</div>
+
 <div style="min-height: 10vh">
     <div class="col text-center">
       <form action="pages/buy.html">
         <input type="submit" class="btn btn-outline-light" value="Enter GweiPump" />
     </form>
-  </div>
-</div>
-
-<div class="container">
-  <div style="min-height: 0vh">
-  <div class="row">
-    <div class="col text-center">
-      <form action="https://github.com/GweiPump">
-        <input type="submit" class="btn btn-outline-light" value="GitHub" />
-    </form>
-    </div>
   </div>
 </div>
 
