--- a/pages/owner.html
+++ b/pages/owner.html
@@ -109,7 +109,7 @@
     <div class="row">
       <div class="col text-center">
         <form action="../index.html">
-          <input type="submit" class="btn btn-outline-light" value="Home Page" />
+          <input type="submit" class="btn btn-outline-light" value="Home" />
       </form>
       </div>
     </div>
