--- a/pages/buy.html
+++ b/pages/buy.html
@@ -5,7 +5,7 @@
   <!-- Bootstrap -->
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="shortcut icon" type="png" href="../images/favicon.png">
+  <link rel="shortcut icon" type="png" href="../images/gweiPump.png">
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
   <!-- Helps objects scale to mobile devices -->
@@ -81,7 +81,7 @@
 </div>
 
 <div class="container">
-  <div style="min-height: 19vh">
+  <div style="min-height: 20vh">
   <div class="row">
     <div class="col text-center">
       <button class="requestRandomValueVRFv2Button btn btn-outline-primary">Vocktail<br>[Chainlink VRFv2 Request]</button>
