--- a/pages/buy.html
+++ b/pages/buy.html
@@ -6,6 +6,7 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="shortcut icon" type="png" href="../images/gweiPump.png">
+  <link rel="stylesheet" href="../sass/bootstrap.css">
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
   <!-- Helps objects scale to mobile devices -->
@@ -20,7 +21,7 @@
   <div style="min-height: 10vh">
   <div class="row">
     <div class="col text-center">
-      <button class="btn btn-outline-light" id=enableEthereumButton></button>
+      <button class="btn btn-outline-warning" id=enableEthereumButton></button>
     </div>
   </div>
  </div>
