Change text and button colors

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="row">
     <div class="col text-center">
       <form action="https://github.com/GweiPump">
-        <input type="submit" class="btn btn-outline-light" value="GweiPump GitHub" />
+        <input type="submit" class="btn btn-outline-secondary" value="GweiPump GitHub" />
     </form>
     </div>
   </div>
@@ -34,7 +34,7 @@
 
     <div class="col text-center">
       <form action="pages/buy.html">
-        <input type="submit" class="btn btn-outline-light" value="Enter GweiPump" />
+        <input type="submit" class="btn btn-outline-secondary" value="Enter GweiPump" />
     </form>
   </div>
 </div>
