--- a/pages/buy.html
+++ b/pages/buy.html
@@ -31,8 +31,8 @@
   <div style="min-height: 10vh">
   <div class="row">
     <div class="col text-center">
-      <p style="color:white">Pump Status <br> (0 Closed , 1 Open) </p>
-      <p style="color:white" id="getPumpStatus"></p>
+      <p style="color:grey">Pump Status:</p>
+      <p style="color:grey" id="getPumpStatus"></p>
     </div>
   </div>
  </div>
@@ -42,8 +42,8 @@
   <div style="min-height: 10vh">
   <div class="row">
     <div class="col text-center">
-      <p style="color:blue">Chainlink request WTI/USD price in contract</p>
-      <p style="color:blue" id="getWtiUsd"></p>
+      <p style="color:grey">Chainlink request WTI/USD price in contract</p>
+      <p style="color:grey" id="getWtiUsd"></p>
     </div>
   </div>
  </div>
@@ -53,8 +53,8 @@
   <div style="min-height: 10">
   <div class="row">
     <div class="col text-center">
-      <p style="color:blue"> (WTI [40mL])/MATIC <br> (Scaled up 10% then refunded to handle price swings while in mempool) </p>
-      <p style="color:blue" id="getWei40mLmatic"></p>
+      <p style="color:grey"> (WTI [40mL])/MATIC <br> (Scaled up 10% then refunded to handle price swings while in mempool) </p>
+      <p style="color:grey" id="getWei40mLmatic"></p>
     </div>
   </div>
  </div>
@@ -64,7 +64,7 @@
   <div style="min-height: 15vh">
   <div class="row">
     <div class="col text-center">
-      <button class="buyOilButton btn btn-outline-light">Buy Oil <br> [Pump 40 mL]</button>
+      <button class="buyOilButton btn btn-outline-secondary">Buy Oil <br> [Pump 40 mL]</button>
     </div>
   </div>
   </div>
@@ -74,8 +74,8 @@
   <div style="min-height: 10vh">
   <div class="row">
     <div class="col text-center">
-      <p style="color:blue">Vocktail <br> (1 Left, 2 Right, 3 Mixed)</p>
-      <p style="color:blue" id="randomValueVRFv2"></p>
+      <p style="color:grey">Vocktail <br> (1 Left, 2 Right, 3 Mixed)</p>
+      <p style="color:grey" id="randomValueVRFv2"></p>
     </div>
   </div>
  </div>
@@ -95,7 +95,7 @@
   <div class="row">
     <div class="col text-center">
       <form action="owner.html">
-        <input type="submit" class="btn btn-outline-light" value="Owner" />
+        <input type="submit" class="btn btn-outline-secondary" value="Owner" />
     </form>
     </div>
   </div>
