--- a/pages/owner.html
+++ b/pages/owner.html
@@ -30,8 +30,8 @@
     <div style="min-height: 10vh">
     <div class="row">
       <div class="col text-center">
-        <p style="color:white">Pump Status <br> (0 Closed , 1 Open) </p>
-        <p style="color:white" id="getPumpStatus"></p>
+        <p style="color:grey">Pump Status:</p>
+        <p style="color:grey" id="getPumpStatus"></p>
       </div>
     </div>
    </div>
@@ -41,7 +41,7 @@
     <div style="min-height: 5vh">
     <div class="row">
       <div class="col text-center">
-        <p style="color:white">Pump Control</p>
+        <p style="color:grey">Pump Control</p>
       </div>
     </div>
    </div>
@@ -71,7 +71,7 @@
     <div style="min-height: 22vh">
     <div class="row">
       <div class="col text-center">
-        <p style="color:blue">
+        <p style="color:grey">
                               Manual upKeep
                               <br>Valid WTI/USD daily upKeep if:
                               <br>Contract has enough LINK tokens to pay Chainlink node for the request
@@ -110,7 +110,7 @@
     <div class="row">
       <div class="col text-center">
         <form action="../index.html">
-          <input type="submit" class="btn btn-outline-light" value="Home" />
+          <input type="submit" class="btn btn-outline-secondary" value="Home" />
       </form>
       </div>
     </div>
