Color contrast static and blockchain text

--- a/pages/buy.html
+++ b/pages/buy.html
@@ -32,7 +32,7 @@
   <div class="row">
     <div class="col text-center">
       <p style="color:grey">Pump Status:</p>
-      <p style="color:grey" id="getPumpStatus"></p>
+      <p style="color:white" id="getPumpStatus"></p>
     </div>
   </div>
  </div>
@@ -43,7 +43,7 @@
   <div class="row">
     <div class="col text-center">
       <p style="color:grey">Chainlink request WTI/USD price in contract</p>
-      <p style="color:grey" id="getWtiUsd"></p>
+      <p style="color:white" id="getWtiUsd"></p>
     </div>
   </div>
  </div>
@@ -54,7 +54,7 @@
   <div class="row">
     <div class="col text-center">
       <p style="color:grey"> (WTI [40mL])/MATIC <br> (Scaled up 10% then refunded to handle price swings while in mempool) </p>
-      <p style="color:grey" id="getWei40mLmatic"></p>
+      <p style="color:white" id="getWei40mLmatic"></p>
     </div>
   </div>
  </div>
@@ -74,18 +74,18 @@
   <div style="min-height: 10vh">
   <div class="row">
     <div class="col text-center">
-      <p style="color:grey">Vocktail <br> (1 Left, 2 Right, 3 Mixed)</p>
-      <p style="color:grey" id="randomValueVRFv2"></p>
+      <p style="color:grey">Vocktail<br>(1 Left, 2 Right, 3 Mixed)</p>
+      <p style="color:white" id="randomValueVRFv2"></p>
     </div>
   </div>
  </div>
 </div>
 
 <div class="container">
-  <div style="min-height: 20vh">
+  <div style="min-height: 17vh">
   <div class="row">
     <div class="col text-center">
-      <button class="requestRandomValueVRFv2Button btn btn-outline-primary">Vocktail<br>[Chainlink VRFv2 Request]</button>
+      <button class="requestRandomValueVRFv2Button btn btn-outline-primary">New Random Drink<br>[Chainlink VRFv2 Request]</button>
     </div>
   </div>
   </div>
