--- a/pages/owner.html
+++ b/pages/owner.html
@@ -17,7 +17,7 @@
   <div style="min-height: 5vh"></div>
 
   <div class="container">
-    <div style="min-height: 10vh">
+    <div style="min-height: 8vh">
     <div class="row">
       <div class="col text-center">
         <button class="btn btn btn-outline-warning" id=enableEthereumButton></button>
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="col text-center">
         <p style="color:grey">Pump Status:</p>
-        <p style="color:grey" id="getPumpStatus"></p>
+        <p style="color:white" id="getPumpStatus"></p>
       </div>
     </div>
    </div>
@@ -48,7 +48,7 @@
   </div>
 
   <div class="container">
-    <div style="min-height: 5vh">
+    <div style="min-height: 7vh">
     <div class="row">
       <div class="col text-center">
         <button class="closePumpButton btn btn-outline-danger">Close</button>
@@ -68,7 +68,7 @@
   </div>
 
   <div class="container">
-    <div style="min-height: 22vh">
+    <div style="min-height: 20vh">
     <div class="row">
       <div class="col text-center">
         <p style="color:grey">
@@ -96,7 +96,7 @@
 
 
   <div class="container">
-    <div style="min-height: 14vh">
+    <div style="min-height: 15vh">
     <div class="row">
       <div class="col text-center">
         <form action="https://vrf.chain.link/mumbai/2217">
