Color USD and MATIC

--- a/pages/buy.html
+++ b/pages/buy.html
@@ -43,7 +43,7 @@
   <div class="row">
     <div class="col text-center">
       <p style="color:grey">Chainlink request WTI/USD price in contract</p>
-      <p style="color:green" id="getWtiUsd"></p>
+      <p style="color:lime" id="getWtiUsd"></p>
     </div>
   </div>
  </div>
@@ -54,7 +54,7 @@
   <div class="row">
     <div class="col text-center">
       <p style="color:grey"> (WTI [40mL])/MATIC <br> (Scaled up 10% then refunded to handle price swings while in mempool) </p>
-      <p style="color:purple" id="getWei40mLmatic"></p>
+      <p style="color:magenta" id="getWei40mLmatic"></p>
     </div>
   </div>
  </div>
