Pump status color change text open green and closed red

--- a/pages/buy.html
+++ b/pages/buy.html
@@ -43,7 +43,7 @@
   <div class="row">
     <div class="col text-center">
       <p style="color:grey">Chainlink request WTI/USD price in contract</p>
-      <p style="color:lime" id="getWtiUsd"></p>
+      <p style="color:SeaGreen" id="getWtiUsd"></p>
     </div>
   </div>
  </div>
@@ -64,7 +64,7 @@
   <div style="min-height: 15vh">
   <div class="row">
     <div class="col text-center">
-      <button class="buyOilButton btn btn-outline-secondary">Buy Oil <br> [Pump 40 mL]</button>
+      <button class="buyOilButton btn btn-outline-secondary">Buy Oil<br>[Pump 40 mL]</button>
     </div>
   </div>
   </div>
@@ -74,8 +74,8 @@
   <div style="min-height: 10vh">
   <div class="row">
     <div class="col text-center">
-      <p style="color:grey">Vocktail<br>(1 Left, 2 Right, 3 Mixed)</p>
-      <p style="color:white" id="randomValueVRFv2"></p>
+      <p style="color:grey">Vocktail Value<br>(1 Left, 2 Right, 3 Mixed)</p>
+      <p style="color:DodgerBlue" id="randomValueVRFv2"></p>
     </div>
   </div>
  </div>
