--- a/pages/buy.html
+++ b/pages/buy.html
@@ -32,7 +32,7 @@
   <div class="row">
     <div class="col text-center">
       <p style="color:grey">Pump Status:</p>
-      <p style="color:white" id="getPumpStatus"></p>
+      <p style="color:red" id="getPumpStatus"></p>
     </div>
   </div>
  </div>
