--- a/pages/owner.html
+++ b/pages/owner.html
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="col text-center">
         <p style="color:grey">Pump Status:</p>
-        <p style="color:white" id="getPumpStatus"></p>
+        <p style="color:red" id="getPumpStatus"></p>
       </div>
     </div>
    </div>
