--- a/pages/buy.html
+++ b/pages/buy.html
@@ -70,7 +70,7 @@
   </div>
 </div>
 
-<div class="container">
+<!-- <div class="container">
   <div style="min-height: 10vh">
   <div class="row">
     <div class="col text-center">
@@ -79,9 +79,9 @@
     </div>
   </div>
  </div>
-</div>
+</div> -->
 
-<div class="container">
+<!-- <div class="container">
   <div style="min-height: 17vh">
   <div class="row">
     <div class="col text-center">
@@ -89,7 +89,7 @@
     </div>
   </div>
   </div>
-</div>
+</div> -->
 
 <div class="container">
   <div class="row">
