Update owner page

--- a/pages/owner.html
+++ b/pages/owner.html
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <!-- <div class="container">
     <div style="min-height: 22vh">
     <div class="row">
       <div class="col text-center">
@@ -81,9 +81,9 @@
       </div>
     </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="container">
+  <!-- <div class="container">
     <div style="min-height: 10vh">
     <div class="row">
       <div class="col text-center">
@@ -92,10 +92,10 @@
       </form>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
-  <div class="container">
+  <!-- <div class="container">
     <div style="min-height: 11vh">
     <div class="row">
       <div class="col text-center">
@@ -104,7 +104,7 @@
       </form>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="container">
     <div class="row">
